examples/test/testpolicy4389.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4389
  namespace: namespace28
spec:
  podSelector:
    matchLabels:
      key20: value18
      key26: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value43
      podSelector:
        matchLabels:
          key9: value21
          key46: value36
